--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+1.0.6 (2015-07-09)
+==================
+bug fix in css/js autload ordering and what would be expected
+
 1.0.5 (2014-09-13)
 ==================
 Bugfix for header postfix zone check
