--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,8 @@
+1.1.1 (2015-07-17)
+==================
+minor code cleanup
+cleanup in how/when responsive main menu is calculated
+
 1.1 (2015-07-10)
 =================
 update font awesome to 4.3.0
