--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+1.2.2 (2016-01-06)
+==================
+alternate column config default/merging bugfix
+
 1.2.1 (2015-11-07)
 ==================
 Config parser bug fix
