--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,8 @@
+1.2.3 (2016-03-01)
+==================
+change 16 column gutter from 30px to 20px
+add skip to content screen reader element
+
 1.2.2 (2016-01-06)
 ==================
 alternate column config default/merging bugfix
