--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+1.2.4 (2016-06-14)
+==================
+update fontawesome version
+
 1.2.3 (2016-03-01)
 ==================
 change 16 column gutter from 30px to 20px
